--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
   }
 }
 
-html{
+html {
   height: 100%;
 }
 
@@ -29,4 +29,11 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+.leaflet-bottom,
+.leaflet-control,
+.leaflet-pane,
+.leaflet-top {
+  z-index: 0 !important;
 }
