--- a/app/globals.css
+++ b/app/globals.css
@@ -22,13 +22,8 @@ html {
 
 body {
   height: 100%;
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: black;
+  background: white;
 }
 
 .leaflet-bottom,
